--- a/smb.conf
+++ b/smb.conf
@@ -1,44 +1,41 @@
-imple smb.conf file for checking
 [global]
- ; “ú–{ŒêŠÖ˜A‚Ìİ’è
+ ; æ—¥æœ¬èªé–¢é€£ã®è¨­å®š
  dos charset = CP932
  unix charset = UTF-8
 
- ;Microsoftƒlƒbƒgƒ[ƒNŠÖ˜A‚Ìİ’è
+ ;Microsoftãƒãƒƒãƒˆãƒ¯ãƒ¼ã‚¯é–¢é€£ã®è¨­å®š
  workgroup = WORKGROUP
- netbios name = work
+ netbios name = taperead
 
- ;ƒGƒ‰[ƒƒbƒZ[ƒW‚Ì—}~İ’è
+ ;ã‚¨ãƒ©ãƒ¼ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã®æŠ‘æ­¢è¨­å®š
  printcap name = /dec/null
 
- ;ƒƒOo—Í‚Ìİ’è
+ ;ãƒ­ã‚°å‡ºåŠ›ã®è¨­å®š
  log level = 1
 
- ;ƒQƒXƒg‚Å‚ÌƒƒOƒCƒ“
+ ;ã‚²ã‚¹ãƒˆã§ã®ãƒ­ã‚°ã‚¤ãƒ³
  map to guest = bad user
-
  guest ok = yes
 
 [work]
-
+;æ›¸ãè¾¼ã¿è¨±å¯
  writeable = yes
-
+ 
+;ãƒ‘ã‚¹ã®è¨­å®š
  path = /tmp/work
 
- ;ƒVƒ“ƒ{ƒŠƒbƒNƒŠƒ“ƒN‚Ì‹–‰Â
+ ;ã‚·ãƒ³ãƒœãƒªãƒƒã‚¯ãƒªãƒ³ã‚¯ã®è¨±å¯
  wide links = yes
  unix extensions = no
- allow insecure wide links = yes
 
- ;ƒSƒ~” ‹@”\
-
+ ;ã‚´ãƒŸç®±æ©Ÿèƒ½
  vfs objects = recycle
 
- #ƒfƒBƒŒƒNƒgƒŠ\‘¢‚ğ•Û
+ #ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªæ§‹é€ ã‚’ä¿æŒ
  recycle:keeptree = yes
- #“¯ˆêƒtƒ@ƒCƒ‹–¼‚ğã‘‚«‚µ‚È‚¢
+ #åŒä¸€ãƒ•ã‚¡ã‚¤ãƒ«åã‚’ä¸Šæ›¸ãã—ãªã„
  recycle:versions = yes
- #ƒSƒ~” ‚É“ü‚ê‚½ƒtƒ@ƒCƒ‹‚ÌÅIƒAƒNƒZƒX‚ğXV‚·‚é
+ #ã‚´ãƒŸç®±ã«å…¥ã‚ŒãŸãƒ•ã‚¡ã‚¤ãƒ«ã®æœ€çµ‚ã‚¢ã‚¯ã‚»ã‚¹æ™‚åˆ»ã‚’æ›´æ–°ã™ã‚‹
  recyclre:touch = yes
- #‹×‚Èƒtƒ@ƒCƒ‹‚ğƒSƒ~” ‚É“ü‚ê‚È‚¢
+ #å·¨ç´°ãªãƒ•ã‚¡ã‚¤ãƒ«ã‚’ã‚´ãƒŸç®±ã«å…¥ã‚Œãªã„
  recycle:maxsize = 2000000000
